# NetManager

./: .gitignore  README.md
clients/: CMakeLists.txt  cmd.exe.lnk  g++.exe.lnk  main.cpp  net.cpp  net.h  tcp_client
server/: CMakeLists.txt  cmd.exe.lnk  main.cpp  net.cpp  net.h  tcp_server
server/src/: Logger.cpp  Logger.h  main.cpp  menu.cpp  menu.h  net.cpp  net.h  reqAPI.cpp  reqAPI.h  settings.cpp  settings.h
